# careerhack2021

./: .gitmodules
project/app/lib_src/cifar10_demo/: cifar10_model_data.cc  cifar10_model_data.h  main.cc  main_functions.cc  main_functions.h
project/app/lib_src/emergency_detect/: emergency-detect-82.tflite  emergency-detect.cc  emergency-detect.h  emergency-detect.tflite  main.cc
project/app/lib_src/mnist_demo/: main.cc  mnist_demo_model.cc  mnist_demo_model.h
project/app/lib_src/person_detection_demo/: main.cc  person_detect_model_data.cc  person_detect_model_data.h
project/app/lib_src/simple_example/: main.cc  mnist_model.cc  mnist_model.h
project/app/vs_project/aiot/: .gitignore
project/app/vs_project/aiot/HardwareDefinitions/avnet_mt3620_sk/: azure_sphere_learning_path.json
project/app/vs_project/aiot/HardwareDefinitions/avnet_mt3620_sk/inc/hw/: azure_sphere_learning_path.h
project/app/vs_project/aiot/IntercoreComms_HighLevelApp/: CMakeLists.txt  app_manifest.json  main.c
project/app/vs_project/aiot/IntercoreComms_RTApp_MT3620_BareMetal/: CMakeLists.txt  linker.ld  main.c
project/app/vs_project/aiot/LearningPathLibrary/: azure_iot.c  epoll_timerfd_utilities.c  epoll_timerfd_utilities.h  exit_codes.h  powerdown_lib.c  powerdown_lib.h  tjpgd.c
project/app/vs_project/aiot/LearningPathLibrary/AVNET/: board.c  board.h
project/app/vs_project/aiot/MIX/: CMakeLists.txt  emergency-detect.cc  emergency.h  linker.ld  main.c
project/app/vs_project/aiot/hlcore/: CMakeLists.txt  app_manifest.json  main.c
project/app/vs_project/aiot/rtcore/: CMakeLists.txt  CMakeSettings.json  main.c
project/app/vs_project/old/MIX/: CMakeLists.txt  emergency.c  emergency.h  main.c
project/app/vs_project/old/hlcore/: app_manifest.json  main.c
project/app/vs_project/old/rtcore/: main.c
project/headers/npu/kernels/: npu_micro_ops.h
project/headers/npu/runtime/dynamic_loading/: dynamic_agent.h  dynamic_context.h  dynamic_script.h
project/headers/npu/runtime/dynamic_loading/platform/mt3620/: npu_platform.h
project/source/tensorflow/tensorflow/lite/c/: common.h
project/source/tensorflow/tensorflow/lite/micro/: micro_allocator.h  micro_interpreter.cc  micro_interpreter.h  micro_profiler.h  micro_utils.cc  micro_utils.h
project/source/tensorflow/tensorflow/lite/micro/kernels/: micro_ops.h
project/source/tensorflow/tensorflow/lite/micro/mt3620/: debug_log.cc
scripts/: checkpatch.pl
tools/: AVNET.json  clean.bat  dos2unix.bat  unix2dos.bat
tools/cmake/: cmsis.cmake
